# fe-mind

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARK_PROGRESS.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  LIVE_VALIDATION.md  MINDCORE_ARCHITECTURE.md  MINDCORE_RESEARCH.md  PRACTICAL_EVAL.md  README.md  RELEASING.md  RESEARCH.md
.dial/: current_context.md
.docs/: femind_spec.db
.github/workflows/: ci.yml
eval/live-library/: README.md  scenarios.json
eval/live-usage/: README.md  scenarios.json
eval/memloft-slice/: README.md  scenarios.json
eval/practical/: README.md  scenarios.json
examples/: benchmark.rs  practical_eval.rs  validate.rs
examples/config/: remote-embed-service.toml  remote-embedding-client.toml
femind-bench/: Cargo.toml  README.md
femind-bench/specs/: PRD.md
femind-bench/src/: download.rs  ingest.rs  llm.rs  main.rs  metrics.rs
mindcore-bench/: Cargo.toml
mindcore-bench/src/: download.rs  main.rs  retrieval.rs  verify.rs
research/: gap_analysis_2026_03.md  similar_projects_landscape_2026.md
scripts/: run-cuda-smoke.sh  run-live-library.sh  run-memloft-slice.sh  run-practical-eval.sh  run-release-gate.sh  run-release-preflight.sh  sync-docs-db.py
scripts/remote/: configure-windows-native-autostart.ps1  configure-windows-wsl-autostart.ps1  install-femind-embed-systemd.sh
specs/: MINILM_API_BACKEND.md  PRD.md  PRODUCTION_HARDENING.md  PRODUCTION_PIPELINE.md  PRODUCTION_ROADMAP.md  REMOTE_MINILM_BACKEND.md  TOP_TIER_MEMORY_ROADMAP_2026-03-30.md  VECTOR_SEARCH_ACCURACY.md  VECTOR_SEARCH_PRECISION.md  VECTOR_SEARCH_PRODUCTION.md
src/: backend_policy.rs  engine.rs  error.rs  lib.rs
src/callbacks/: llm.rs
src/context/: budget.rs  mod.rs
src/embeddings/: api.rs  backend.rs  candle_native.rs  fallback.rs  mod.rs  noop.rs  profile.rs  remote.rs  service.rs
src/ingest/: chunking.rs  fact_extraction.rs  llm_extract.rs  mod.rs
src/llm/: api.rs  cli.rs  mod.rs
src/memory/: activation.rs  mod.rs  pruning.rs  relations.rs  similarity_dedup.rs  store.rs
src/reranking/: api.rs  backend.rs  candle_native.rs  fallback.rs  mod.rs  profile.rs  remote.rs
src/scoring/: category.rs  importance.rs  mod.rs  procedural_safety.rs  recency.rs  review_safety.rs  secret_policy.rs  source_authority.rs  source_provenance.rs  source_trust.rs
src/search/: ann.rs  builder.rs  fts5.rs  hybrid.rs  mod.rs  query_expand.rs  vector.rs
src/storage/: engine.rs  migrations.rs  schema.rs  two_tier.rs
src/traits/: consolidation.rs  evolution.rs  llm.rs  mod.rs  record.rs  reranker.rs  scoring.rs
tests/: candle_e2e.rs  full_pipeline.rs  hybrid_e2e.rs  integration.rs  scoring_integration.rs  vector_search.rs
