[workspace]
members = [".", "femind-bench"]

[package]
name = "femind"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Pluggable, feature-gated memory engine for AI agent applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/victorysightsound/fe-mind"
keywords = ["memory", "ai", "agent", "search", "embedding"]
categories = ["database", "text-processing"]
readme = "README.md"

[features]
default = ["fts5"]

# Core search (always available)
fts5 = []

# Local embeddings — all-MiniLM-L6-v2 via candle BERT (works native + WASM)
local-embeddings = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]

# API embeddings — OpenAI-compatible /v1/embeddings endpoint (DeepInfra, etc.)
api-embeddings = ["dep:ureq"]

# API LLM — OpenAI-compatible /v1/chat/completions endpoint
api-llm = ["dep:ureq"]

# CLI LLM — Claude/ChatGPT/Gemini via command-line tools
cli-llm = []

# LLM-powered ingest (fact extraction, consolidation)
llm-ingest = []

vector-search = ["local-embeddings", "dep:tokio"]

# ANN indexing — HNSW approximate nearest neighbor via instant-distance
ann = ["dep:instant-distance"]

# Cross-encoder reranking (post-RRF refinement, uses candle BERT)
reranking = ["local-embeddings"]

# Graph memory (SQLite relationship tables)
graph-memory = []

# Temporal validity fields
temporal = []

# Consolidation pipeline (extract → consolidate → store)
consolidation = []

# ACT-R activation-based decay model
activation-model = []

# MCP server interface
mcp-server = ["dep:axum", "dep:tower"]

# Two-tier memory (global + project databases)
two-tier = []

# Encryption at rest via SQLCipher
encryption = ["rusqlite/bundled-sqlcipher"]
encryption-vendored = ["encryption", "rusqlite/bundled-sqlcipher-vendored-openssl"]

# OS keychain integration for encryption key storage
keychain = ["dep:keyring"]

# Everything (native, excluding encryption and mcp-server)
full = [
    "vector-search",
    "api-embeddings",
    "api-llm",
    "cli-llm",
    "llm-ingest",
    "ann",
    "reranking",
    "graph-memory",
    "temporal",
    "consolidation",
    "activation-model",
    "two-tier",
]

[dependencies]
# Always required
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sha2 = "0.10"
tracing = "0.1"

# Async runtime (only for vector-search background indexer and embedding inference)
tokio = { version = "1", features = ["rt", "sync"], optional = true }

# Local embeddings (candle)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", optional = true }

# API embeddings (OpenAI-compatible endpoint) — ureq is sync, no tokio conflicts
ureq = { version = "2", features = ["json"], optional = true }

# ANN indexing (HNSW)
instant-distance = { version = "0.6", optional = true }

# MCP server
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }

# Keychain (encryption key storage)
keyring = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"

# Optimize candle/tokenizer deps even in dev builds — embedding inference
# is ~100x slower without optimizations, making dev iteration impossible.
[profile.dev.package.candle-core]
opt-level = 2
[profile.dev.package.candle-nn]
opt-level = 2
[profile.dev.package.candle-transformers]
opt-level = 2
[profile.dev.package.tokenizers]
opt-level = 2
[profile.dev.package.gemm]
opt-level = 2
[profile.dev.package.gemm-common]
opt-level = 2
[profile.dev.package.gemm-f32]
opt-level = 2
[profile.dev.package.gemm-f16]
opt-level = 2
[profile.dev.package.half]
opt-level = 2

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
should_implement_trait = "allow"
if_same_then_else = "allow"
type_complexity = "allow"
